# AI-Prototyping-Lab---MedTech-Stream

./: .env.example  .gitignore  CODEBASE_CONTEXT.md  README.md  docker-compose.yml  index.html
AI-Prototyping-Lab---MedTech-Stream/backend/: .dockerignore  Makefile  alembic.ini  pyproject.toml
AI-Prototyping-Lab---MedTech-Stream/backend/alembic/: env.py
AI-Prototyping-Lab---MedTech-Stream/backend/app/: main.py
AI-Prototyping-Lab---MedTech-Stream/backend/tests/: conftest.py  test_auth_api.py  test_ocr_smoke.py  test_persistence_models.py
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.py
backend/alembic/versions/: 20260326_01_persistence_foundation.py  20260418_01_thread_anchor_finding.py  20260418_02_thread_anchor_and_access.py  20260423_03_report_interpretation.py
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/db/: base.py  models.py  seed.py
backend/app/dependencies/: __init__.py  auth.py  reports.py
backend/app/routers/: audit.py  auth.py  interpret.py  notifications.py  parse.py  reports.py  threads.py  translate.py
backend/app/routes/: health.py  interpret.py  upload.py
backend/app/services/: auth.py  llm.py  ocr.py  openai_service.py  parse_llm.py  parse_pipeline.py  parser.py  parser_service.py  pdf_service.py  questions.py  reports.py  threads.py  trends.py
backend/tests/: __init__.py  conftest.py  factories.py  test_api_end_to_end.py  test_audit_log_retrieval.py  test_audit_sharing.py  test_auth_api.py  test_clinician_endpoints.py  test_database_bootstrap.py  test_expired_share_cleanup.py  test_expiry_enforcement.py  test_harness_imports.py  test_health.py  test_interpret.py  test_ocr_smoke.py  test_parse_api.py  test_parse_llm.py  test_parse_pipeline.py  test_parser_more.py  test_parser_pdf.py  test_parser_text.py  test_report_create_api.py  test_startup_migrations.py  test_threads.py  test_threads_anchor_notifications.py  test_translate.py  test_trends_api.py  test_verified_clinician.py  test_view_audit.py
frontend/: package.json  (+4 more)
(+139 files in other folders)
