[project]
name = "reportx-backend"
version = "0.1.0"
description = "ReportX FastAPI backend"
requires-python = ">=3.11"
authors = [{name = "ReportX", email = "dev@reportx.local"}]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "PyJWT>=2.8.0",
  "passlib[bcrypt]>=1.7.4",
  "pymupdf>=1.24.0",
  "httpx>=0.27.0",
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
  "openai>=1.40.0",
  "email-validator>=2.0.0",
  "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.2",
  "black>=24.4.0",
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "aiosqlite>=0.21.0",
  "pytest-asyncio>=0.23.8",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
